# mrcepid-makebgen

./: .gitignore  Readme.developer.md  Readme.md  all_chunks_combined_chr18.txt  chunking_log_chr18.txt  duplicates_only.txt  dxapp.json  pyproject.toml
chunked_output_chr18/: chr18_chunk1.txt  chr18_chunk10.txt  chr18_chunk11.txt  chr18_chunk12.txt  chr18_chunk13.txt  chr18_chunk14.txt  chr18_chunk15.txt  chr18_chunk16.txt  chr18_chunk17.txt  chr18_chunk18.txt  chr18_chunk19.txt  chr18_chunk2.txt  chr18_chunk20.txt  chr18_chunk21.txt  chr18_chunk22.txt  chr18_chunk23.txt  chr18_chunk24.txt  chr18_chunk25.txt  chr18_chunk26.txt  chr18_chunk27.txt  chr18_chunk28.txt  chr18_chunk3.txt  chr18_chunk4.txt  chr18_chunk5.txt  chr18_chunk6.txt  chr18_chunk7.txt  chr18_chunk8.txt  chr18_chunk9.txt
makebgen/: makebgen.py  mrcepid-makebgen.py  test.py
makebgen/chunker/: chunking_helper.py
makebgen/deduplication/: deduplication.py
makebgen/helper_tools/: chunking_helper.py  concat_bgens.py
makebgen/process_bgen/: bgen_multithread.py  helper.py  process_bgen.py
makebgen/scripts/: chunking_helper.py  concat_bgens.py
scripts/: chunk_coordinates_intervaltree.py  chunking_helper.py  concat_bgens.py  gene_dict.py
src/: mrcepid-makebgen.py
test/: .coverage  formatted_coords_with_chunking.csv  test_bgen_multithread.py  test_chunk_coordinates_intervaltree.py  test_chunking_helper.py  test_concat_bgens.py  test_coords_v2_with_chunking.csv  test_coords_with_chunking.csv  test_deduplication.py  test_helper.py  test_process_bgen.py
test/chunked_files/: chr7_chunk13.csv  chr7_chunk15.csv  chr7_chunk17.csv  chr7_chunk2.csv  chr7_chunk5.csv  chr7_chunk8.csv  chr7_chunk9.csv  chr8_chunk1.csv  chr8_chunk10.csv  chr8_chunk13.csv  chr8_chunk15.csv  chr8_chunk16.csv  chr8_chunk2.csv  chr8_chunk3.csv  chr8_chunk4.csv  chr8_chunk5.csv  chr8_chunk6.csv  chr8_chunk8.csv  chr8_chunk9.csv
test/test_data/: concat_coords.txt  formatted_coords.txt  test_coords.txt  test_coords_v2.txt  test_coords_v2_with_chunking.csv  test_coords_with_chunking.csv  test_input1.chunk1.vcf.sites.vep.vcf.gz.csi  test_input1.chunk1.vcf.sites.vep.vcf.gz_summary.html  test_input1.chunk1.vcf.vep.tsv.gz.tbi  test_input1.vcf.filtered.bcf.csi  test_input1.vcf.gz.tbi  test_input1.vcf.vep_table.tsv  test_input2.chunk2.vcf.filtered.bcf.csi  test_input2.chunk2.vcf.gz.tbi  test_input2.chunk2.vcf.sites.vep.vcf.gz.csi  test_input2.chunk2.vcf.vep.tsv.gz.tbi  (+2 more)
(+27 files in other folders)
