[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "makebgen"
version = "2.0.0"
description = ""
authors = [ "Eugene Gardner <eugene.gardner@mrc-epid.cam.ac.uk>",]
readme = "Readme.md"
repository = "https://github.com/mrcepid-rap/mrcepid-makebgen"

[tool.poetry.dependencies]
python = "~3.8"
dxpy = "0.346.0"
importlib-resources = "5.12.0"
setuptools = "60.2.0"
pandas = "1.5.2"
pytest = "^7.4.0"
general-utilities = {git = "https://github.com/mrcepid-rap/general_utilities.git", rev = "HG-589-update-general-utilities-to-support-new-burden-runs"}
bgen = "^1.7.3"

[tool.coverage.run]
omit = [
    "test/*",   # Exclude all test files
    "tests/*",  # If your tests folder is named "tests"
]